# opencode-config

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: adr-check.yml  always-ci.yml  ci.yml  permissions-check.yml
.opencode/: opencode.json  package.json
.opencode/agents/: docs-reviewer.md  memory-syncer.md  reviewer.md
.opencode/commands/: configure-opencode.md  opencode-config.md  pipeline-driver.md  run-pipeline.md  spec-driver.md  spec.md
.opencode/scripts/: check-adr-refs.py  check-permissions.py  observability.py  pipeline-status.py  scaffold-handoff.sh  setup-memory.sh  spec-status.py  tunnel.sh
.opencode/tools/: commit.ts  create-issue.ts  create-pr.ts  memory-setup.ts  merge-pr.ts  pipeline-status.ts  spec-status.ts  tunnel.ts
docs/decisions/: 001-pr-18-ci-bootstrap.md  001-pr-5-migrate-src-tests.md  002-pr-23-migrate-opencode-config.md  002-pr-6-ci-bootstrap.md  003-pr-17-migrate-src-tests.md  004-pr-24-docker-setup.md  005-pr-25-reviewer-echo-bypass.md  006-pr-26-skills-cleanup-batch.md  007-pr-12-configure-opencode-rewrite.md  008-pr-28-issue-repo-init-rewrite.md  009-pr-14-commands-rename.md  009-pr-29-commands-rename.md  010-pr-16-run-pipeline-rewrite.md  010-pr-30-run-pipeline-rewrite.md  011-pr-31-orchestrator-agents-md.md  012-pr-9-docs-skeleton-readme.md  013-pr-33-tunnel-tool.md  014-pr-36-memory-setup-tool.md  015-pr-38-validation-tools.md  015-pr-<PR-NUMBER>-validation-tools.md  016-pr-40-permissions-lock.md
docs/handoff/: pr-14-commands-rename.md  pr-15-reviewer-echo-bypass.md  pr-16-run-pipeline-rewrite.md  pr-17-migrate-src-tests-python.md  pr-18-ci-ubuntu-latest-workflows.md  pr-24-docker-setup.md  pr-25-reviewer-echo-bypass.md  pr-26-skills-cleanup-batch.md  pr-27-configure-opencode-rewrite.md  pr-28-issue-repo-init-rewrite.md  pr-29-commands-rename.md  pr-31-orchestrator-agents-md.md  pr-32-docs-skeleton-readme.md  pr-33-tunnel-tool.md  pr-34-tunnel-tool.md  pr-35-memory-setup-tool.md  pr-36-memory-setup-tool.md  pr-38-validation-tools.md  pr-40-permissions-lock.md  pr-5-migrate-src-tests-python.md  pr-6-ci-ubuntu-latest-workflows.md  pr-8-docker-setup.md  (+2 more)
tests/: _ts_loader.mjs  test_check_adr_refs.py  test_check_permissions.py  test_cli.py  test_commit_tool.py  test_commit_tool.ts  test_create_issue_tool.py  test_create_issue_tool.ts  test_create_pr_tool.py  test_create_pr_tool.ts  test_embedder.py  test_index.py  test_memory_setup_tool.py  test_memory_setup_tool.ts  test_observability.py  test_permissions.py  test_pipeline_status.py  test_pipeline_status_adr.py  test_pipeline_status_ci.py  test_pipeline_status_tool.py  test_pipeline_status_tool.ts  test_search.py  test_setup_memory.py  test_spec_status.py  test_spec_status_tool.py
(+23 files in other folders)
